Redirect to product page using JS to avoid link preview on ios

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -65,13 +65,14 @@
   border-radius: 5px;
   position: relative;
   z-index: 999;
+  cursor: pointer;
 
   &.wishlist {
     opacity: 0.6;
   }
 
   &.nearby-target {
-    box-shadow: 0 0 0 3px white;
+    box-shadow: 0 0 3px 3px #FFF;
   }
 }
 
